tests/fixtures/invalid/set_le_float.py
# Cannot compare with <= Set[int] and Float
x: bool = {1, 2, 3} <= 1.0
